<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Filement</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="CreateButton">Create an account</string>
    <string name="PairButton">Pair Device</string>
    <string name="SignButton">Sign In</string>
    <string name="device_name">Device Name</string>
    <string name="my_android">My Android</string>
    <string name="account_email">Email</string>
    <string name="pin">Pin</string>
    <string name="PIN">PIN</string>
    <string name="device_password">Device Password</string>
    <string name="pair">Pair</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logo">Logo</string>
    <string name="filement_service_started">Filement is started.Click to get access.</string>
    <string name="filement_service_no_conn">There is no internet connectivity.</string>
    <string name="filement_service_stopped">Filement service has been stopped.</string>
    <string name="filement_service_label">Filement service</string>
    <string name="filement_server_problem">Filement can\'t start the service.</string>
    <string name="filement">Filement</string>
 	<string name="loading_video">Loading video</string>
 	<string name="paired_descr">Your device is currently paired with your account. You can turn it On/Off.</string>
 	<string name="enable">Enable Filement</string>
 	
 	
 	<string-array name="spinner">
        <item>Yes</item>
        <item>No</item>
    </string-array>
        <string name="PairDevDescr">You can pair your device with your account, by filling the fields below. Email and PIN can be acquired by clicking on \"Add Device\" in Filement.com.</string>
        <string name="started_service">Filement Service is started.</string>
        <string name="description_text">Welcome description text</string>
    
</resources>