<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0281b9"
    tools:context=".Filement" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="50dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/CreateAccButton"
            style="@style/TextShadow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/gradient_green"
            android:text="@string/CreateButton" />

        <Button
            android:id="@+id/SignInButton"
            style="@style/TextShadow"
            android:background="@drawable/gradient_green"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/SignButton" />

        <Button
            android:id="@+id/PairButton"
            style="@style/TextShadow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/gradient_green"
            android:text="@string/PairButton" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

   

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="229dp" >

         <ImageView
             android:id="@+id/imageView1"
             android:layout_width="144dp"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="48dp"
             android:src="@drawable/filementlogo" />

         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/imageView1"
             android:layout_margin="10dp"
             android:gravity="center"
             android:text="Filement provides secure, direct access to your devices."
             android:textAppearance="?android:attr/textAppearanceMedium" />
         
    </RelativeLayout>

</FrameLayout>